# arlbench

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS.md  CITATION.cff  LICENSE  Makefile  PC2_infos.md  README.md  changelog.md  cli.py  croissant_metadata.json  dqn_5_Min-Max + MSE.txt  dqn_6_Min-Max + MSE.txt  experiments.sh  no_learning_error.sh  ppo_4_Min-Max + MSE.txt  ppo_5_Min-Max + MSE.txt  ppo_6_Min-Max + MSE.txt  pyproject.toml  requirements.txt  run_arlbench.py  runtime_experiments.sh  sac_5_Min-Max + MSE.txt  sac_6_Min-Max + MSE.txt  setup.py  test_run.sh  this_causes_an_error.sh  tox.ini
.github/: docs.yaml  pytest.yaml
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: docs.yaml  publish_release.yaml  pytest.yaml
arlbench/: __init__.py  arlbench.py  autorl_env.py  autorl_gymnax_env.py  cli.py  compare_agents.py  experiment_handling_hydra.ipynb  objectives.py  plotting_examples.ipynb  test_agents.py  test_atari_ppo.sh
arlbench/agents/: __init__.py  abstract_agent.py  agent.py  common.py  dqn.py  models.py  oop_dqn.py  oop_ppo.py  ppo.py  sac.py
arlbench/algorithms/: __init__.py  algorithm.py  buffers.py  common.py  dqn.py  dqn_vw.py  models.py  ppo.py  ppo_envpool.py  ppo_vw.py  sac.py
arlbench/autorl/: __init__.py  autorl_env.py  checkpointing.py  objectives.py  state_features.py
arlbench/autorl_env/: autorl_env.py  objectives.py
arlbench/configs/: base.yaml  dqn_base.yaml  random_runs_dqn.yaml  tune_dqn_pbt.yaml  tune_dqn_smac.yaml
arlbench/core/: running_statistics.py
arlbench/environments/: __init__.py  autorl_env.py  brax.py  environment.py  envpool.py  gymnasium.py  gymnax.py  make_env.py
arlbench/example_run/: configspace.json
arlbench/plotting/: plotting.py
arlbench/singularity/: README.md  example.py  run.sh  run_in_container.sh  singularity_container.recipe
arlbench/utils/: __init__.py  checkpointing.py  common.py  environments.py  handle_termination.py  hydra_utils.py  unified_wrappers.py  (+2 more)
configs/: base.yaml  dqn_base.yaml  random_runs.yaml  random_runs_dqn.yaml  tune_dqn_pbt.yaml  tune_dqn_smac.yaml  tune_pbt.yaml  tune_smac.yaml
docs/: CONTRIBUTING.md  api.rst  conf.py  faq.rst  index.rst  installation.rst
examples/: README.md  Readme.md  hypersweeper_tuning.ipynb  landscape_analysis.ipynb  optimization_data_analysis.ipynb  run_arlbench.py  run_heuristic_schedule.py  run_reactive_schedule.py  schedules.ipynb
main/: .buildinfo  CONTRIBUTING.html  api.html  arlbench.autorl.html  arlbench.core.algorithms.dqn.html  arlbench.core.algorithms.html  arlbench.core.algorithms.ppo.html  arlbench.core.algorithms.sac.html  arlbench.core.environments.html  arlbench.core.html  arlbench.core.wrappers.html  arlbench.html  arlbench.plotting.html  arlbench.utils.html  commands.html  contributing.html  faq.html  genindex.html  glossary.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
notebooks/: compute_hyperband_budget.ipynb  compute_hyperband_budget.py  hp_budgets.ipynb
rs_data_analysis/: budget_correlations.ipynb  budget_correlations_dqn.json  budget_correlations_ppo.json  budget_correlations_sac.json  fanova_interactions.ipynb  get_footprints.ipynb  get_igprs.ipynb  get_importances.ipynb  hp-combos.csv  igprs.py  igprs_new.py  plot_returns.ipynb  top_2_importances.csv
runscripts/: aggregate_results.py  aggregate_results_landscaping.py  aggregate_results_optimizers.py  compute_hp_budgets.py  create_configs.py  fillna_initial_design.py  landscaping_commands.sh  optimizer_commands.sh  plot.py  plot_baselines.py  plot_optimizers_over_time.py  plot_runtime_comparisons.py  plot_runtime_experiments.py  plot_smac.py  prepare_smac_runs.py  run_arlbench.py  run_experiments.py  run_runtime_experiments.py  sweep_commands.sh  test.sh  test_run.sh
runscripts_jannis/: build_container.sh  missing_runs.sh  pbt_luis_brax.sh  pbt_luis_local_gpu.sh  pbt_pc2.sh  pbt_pc2_atari.sh  pbt_pc2_box2d.sh  pbt_pc2_brax.sh  pbt_pc2_classic_control.sh  pbt_pc2_local.sh  pbt_pc2_local_gpu.sh  pbt_pc2_minigrid.sh  rs_atari.sh  rs_classic_control.sh  rs_luis.sh  rs_luis_atari.sh  rs_luis_brax.sh  rs_luis_classic_control.sh  rs_luis_local.sh  rs_luis_singularity.sh  rs_pc2.sh  rs_pc2_atari.sh  rs_pc2_box2d.sh  rs_pc2_brax.sh  rs_pc2_classic_control.sh  rs_pc2_local.sh  rs_pc2_local_gpu.sh  rs_pc2_minigrid.sh  run_rs.sh  runtime_experiments.sh  smac_mf_pc2.sh  smac_mf_pc2_box2d.sh  smac_mf_pc2_brax.sh  smac_mf_pc2_classic_control.sh  smac_mf_pc2_local.sh  smac_mf_pc2_local_gpu.sh  smac_mf_pc2_minigrid.sh  smac_pc2.sh  smac_pc2_atari.sh  smac_pc2_box2d.sh  (+5 more)
runscripts_julian/: .rs_atari_dgx.sh.swp  base_procgen.sh  pbt_claix.sh  pbt_claix_atari.sh  pbt_claix_box2d.sh  pbt_claix_brax.sh  procgen_baseline.sh  rs_atari_dgx.sh  rs_atari_h100.sh  rs_atari_kathleen.sh  rs_atari_v100.sh  rs_box2d_cpu.sh  rt_runtime_h100.sh  run_rs.sh  run_rs_2cores.sh  run_rs_8cores.sh  run_rs_claix.sh  run_rs_kathleen.sh  run_rs_max10.sh  run_runtime_claix.sh  smac_claix.sh  smac_claix_atari.sh  smac_claix_box2d.sh  smac_claix_brax.sh  smac_mf_claix.sh  smac_mf_claix_atari.sh  smac_mf_claix_box2d.sh  smac_mf_claix_brax.sh  tune_rs_claix.sh  tune_rs_claix_atari.sh  tune_rs_claix_box2d.sh  tune_rs_claix_brax.sh
runtime_comparisons/: .plot_runtime_comparisons.py.swp  plot_optimizers_over_time.py  plot_runtime_comparisons.py
runtime_coparisons/: plot_runtime_comparisons.py
singularity/: README.md  example.py  run_in_container.sh  singularity_container.recipe
subset_selection/: create_arlbench_dataset.py  find_best_task_subset.py  inspect_buffer_sizes.py  inspect_dataset.ipynb  offline_evaluations.py  parallel_for.py  subset_selection.py
subset_validation/: plot_optimizers_over_time.py  subset_validation.py
tests/: __init__.py  test_agents.py  test_arlbench.py  test_autorl_env.py  test_autorlenv_checkpointing.py  test_checkpointing.py  test_dqn.py  test_envpool.py  test_envs.py  test_objectives.py  test_ppo.py  test_sac.py  test_utils.py  test_vector_wrapper.py  test_wrappers.py
(+35666 files in other folders)
